2014-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* newcomment.el (comment-indent-new-line): Sink code where it's used.
	Reuse the previous comment's indentation unconditionally if it's on its
	own line.

2014-04-09  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/lisp.el (backward-up-list): Add `escape-strings',
	`no-syntax-crossing' arguments.  Forward to `up-list'.
	(up-list): Add `escape-strings', `no-syntax-crossing' arguments.
	Implement logic for escaping from strings.  Use narrowing to deal
	with corner cases.

2014-04-09  Leo Liu  <sdl.web@gmail.com>

	* net/rcirc.el (rcirc-connection-info): New variable.
	(rcirc-connect): Use it to store connection info.
	(rcirc-buffer-process): Avoid get-buffer-process which returns nil
	for killed process.
	(rcirc-cmd-reconnect): New command.  (Bug#17045)
	(rcirc-mode, set-rcirc-encode-coding-system)
	(set-rcirc-decode-coding-system, rcirc-connect): Use setq-local.

2014-04-09  Daniel Colascione  <dancol@dancol.org>

	* emacs-lisp/cl-indent.el: Add comment claiming
	facility is also good for elisp.
	(lisp-indent-find-method): New function.
	(common-lisp-indent-function): Recognize cl-loop.
	(common-lisp-indent-function-1): Recognize cl constructs; use
	`lisp-indent-find-method' instead of `get' directly.
	(if): Use else-body style for elisp.

2014-04-09  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Highlight more
	Module methods.  (Bug#17216)

2014-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* help.el (describe-bindings): Fix buffer handling (bug#17210).
	(describe-bindings-internal): Mark obsolete.

2014-04-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (with-silent-modifications): Don't bind deactivate-mark,
	buffer-file-name, and buffer-file-truename any more.

2014-04-08  Leo Liu  <sdl.web@gmail.com>

	Use lexical-binding and require cl-lib.
	* net/rcirc.el (rcirc, rcirc-handler-ctcp-KEEPALIVE)
	(rcirc-handler-generic, rcirc-fill-paragraph)